[gd_scene load_steps=7 format=2]

[ext_resource path="res://modules/Reusables/parts/ButtonPromptContextKoBeWi.gd" type="Script" id=1]
[ext_resource path="res://addons/ActionIcon/ActionIcon.gd" type="Script" id=2]
[ext_resource path="res://addons/ActionIcon/Keyboard/Blank.png" type="Texture" id=3]
[ext_resource path="res://font/ubuntu-font-family-0.83/Ubuntu-R.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://modules/Reusables/SuperLabel.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
resource_local_to_scene = true
resource_name = "SuperLabel"
size = 24
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="ButtonPromptContextKoBeWi" type="Button"]
margin_right = 200.0
margin_bottom = 80.0
rect_min_size = Vector2( 200, 0 )
script = ExtResource( 1 )

[node name="ContainsThese" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ActionIcon" type="TextureRect" parent="ContainsThese"]
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 0 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 6
script = ExtResource( 2 )

[node name="ActionLabel" parent="ContainsThese" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 84.0
margin_right = 200.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "Actioner"
valign = 1

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
